k8minvu/pssim-api-qa/deploy.yaml
apiVersion: apps/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: pssim-api
  labels:
    app: pssim-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pssim-api
  template:
    metadata:
      labels:
        app: pssim-api
    spec:
      containers:
      - name: pssim-api
        image: minvu.azurecr.io/pssim-api:04fa09a1eec1bd7ca2d3850f6b61b26b27e393b3
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: linux
      imagePullSecrets:
        - name: azureregistry
