k8minvu/pssim-api-qa/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pssim-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - pssim-api.minvu.cl
    secretName: default-server-secret
  rules:
  - host: pssim-api.minvu.cl
    http:
      paths:
      - path: /api
        backend:
          serviceName: pssim-api-svc
          servicePort: 80
      - path: /v1
        backend:
          serviceName: pssim-api-svc
          servicePort: 80
